testdata/golden/sema/invalid/implicit_block_value_warn.fmt
fn main() -> int {
    let x = {
        let base = 1;
        base + 1;
    };
    return x;
}
